# first-repo

./: CMakeLists.txt  LongNum.cpp  LongNum.h  main.cpp
long-number-library/: CMakeLists.txt  LongNum.cpp  LongNum.h  LongNum.hpp
test/: CMakeLists.txt  all_tests.cpp  test_display_work.cpp
